--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,15 @@
 <html>
 <body>
-<h2>hello world</h2>
+    <h1>Cadastro de carro</h1>
 
-    <form action="/create-car" method="post"></form>
-<input type="text" name="carName" id="carName">
-<button type="submit">Cadastrar</button>
+    <form action="/create-car" method="post">
+
+        <label>Car name:</label>
+        <input type="text" name="carName" id="carName" >
+
+        <button type="submit">Cadastrar</button>
+
+    </form>
+
 </body>
 </html>
